# SFMLTetris

./: .clang-format  .gitignore  CMakeLists.txt  clang_format.sh  conanfile.txt  run_cmake.sh
include/tetris/: Tetris.hpp
include/tetris/impl/: CollisionDetector.hpp  Constants.hpp  GameBoard.hpp  GameBoardManager.hpp  Position.hpp  Shape.hpp  Shapes.hpp  fwd.hpp
src/: CMakeLists.txt  Tetris.cpp  main.cpp
src/impl/: CMakeLists.txt  CollisionDetector.cpp  GameBoard.cpp  GameBoardManager.cpp  Shape.cpp  Shapes.cpp
test/: CMakeLists.txt  main.cpp
